# configgymajiggy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-amd64  README.md  deploy.sh  docker-compose.yml
scripts/: biboop.service  make_amd64.sh
src/: main.rs
