[package]
name = "biboop"
version = "0.1.0"
authors = ["Daniel Brain <daniel.brain@biboop.com>"]
edition = "2018"

[dependencies]
evmap = "10.0"
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
clokwerk = "0.4"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
actix-web = { version = "4.8", features = ["macros"] }
tokio-test = "0.4"