[package]
name = "biboop"
version = "0.1.0"
authors = ["Daniel Brain <daniel.brain@biboop.com>"]
edition = "2021"

[dependencies]
evmap = "10.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"
clokwerk = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
axum-test = "17.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["test-util"] }